# gittwo

./: .gitignore  Cargo.toml  LICENSE  README.md  prepare_for_push.sh
src/: lib.rs
src/configs/: add_config.rs  checkout_config.rs  clone_config.rs  commit_config.rs  fetch_config.rs  init_config.rs  mod.rs  pull_config.rs  push_config.rs  remote_config.rs  restore_config.rs
src/helpers/: channel.rs  credentials.rs  mod.rs  repository.rs
src/repository/: credentials.rs  mod.rs  repository.rs
